# setup.cfg inspired from:
# https://gist.github.com/althonos/6914b896789d3f2078d1e6237642c35c
# https://youtu.be/DhUpxWjOhME

[metadata]
name = bsimport
version = 0.1.1
author = JulioLoayzaM
url = https://github.com/JulioLoayzaM/bsimport
description = A tool for importing Markdown files to a Bookstack instance.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
platform = any
keywords = bookstack, import, markdown
classifiers =
    Development Status :: 7 - Inactive
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

#project_urls = 
#    Changelog =

[options]
packages = bsimport
python_requires = >=3.6
install_requires =
    requests >=2.26.0
    typer >=0.4.0
setup_requires =
    # setuptools >=30.3.0     # minimal version for `setup.cfg`
    setuptools >=38.3.0     # version with most `setup.cfg` bugfixes
    # setuptools >=46.4.0     # let's you use attr: to extract version from a module
zip_safe = false
# test_suite = tests
# tests_require =
#     {tests_require}

[options.extras_require]
testing =
    flake8 >=4.0.1

[options.package_data]
bsimport = py.typed
    
[flake8]
exclude =  .git, .eggs, __pycache__, tests/, docs/, build/, dist/
